fix filter visibility bug

--- a/wp-content/themes/lettersgallery/assets/css/components/home/_gallerySection.scss
+++ b/wp-content/themes/lettersgallery/assets/css/components/home/_gallerySection.scss
@@ -38,10 +38,6 @@
     }
   }
 
-  @include tablet() {
-    display: none;
-  }
-
   &:not(:first-child) {
     margin-top: var(--offset-50);
   }
@@ -72,6 +68,7 @@
     margin-top: rem(18);
 
     @include tablet() {
+      display: none;
       margin-top: rem(12);
     }
 
